increased panel width to prevent wrap and hide back nav, closes #5

--- a/geoportal/static/css/style.css
+++ b/geoportal/static/css/style.css
@@ -132,7 +132,7 @@ warning: #ff1b28
 
  }
  #panel_scroll{
-    width:2000px;
+    width:5000px;
     /*height:100%;*/
 
  }
